# pyCZDS

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/pyCZDS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyczds/: authentication.py  client.py  helpers.py
tests/: test_authentication.py  test_client.py  test_helpers.py  test_pyczds.py
